# CubeSat_ICAT_2024

./: .gitignore  Calibración_Lectura_ISL29125  Inicialización  Inicialización_ISL29125  Lectura y calibración  README.md
dht22_project/: CMakeLists.txt  dht22.c  dht22.h  dht22_config.c  dht22_ejemplo.c
isl29125_project/: CMakeLists.txt  isl29125.c  isl29125.h  isl29125_config.c  isl29125_ejemplo.c
maxm10s_project/: CMakeLists.txt  max_m10s.h  max_m10s_config.c  max_m10s_ejemplo.c  maxm10s.c
mlx90393_project/: CMakeLists.txt  mlx90393.c  mlx90393.h  mlx90393_config.c  mlx90393_ejemplo.c
mpu9250_project/: CMakeLists.txt  mpu9250.c  mpu9250.h  mpu9250_config.c  mpu9250_ejemplo.c
ms580314ba_project/: CMakeLists.txt  ms580314ba.c  ms580314ba.h  ms580314ba_config.c  ms580314ba_ejemplo.c
uvm30a_project/: CMakeLists.txt  uvm30a.c  uvm30a.h  uvm30a_config.c  uvm30a_ejemplo.c
veml6030_project/: CMakeLists.txt  veml6030.c  veml6030.h  veml6030_config.c  veml6030_ejemplo.c
